# ObsidianGuard

./: CMakeLists.txt  LICENSE.md  README.md
include/ObsidianGuard/: algorithmType.h  guard.h  qkey.h
src/: guard.cpp
